--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+input {
+	font-size: 20px;
+}
 #wrapper {margin-top: 0px; margin-bottom: 0px; margin-left: 0px; margin-right: 0px;
 }
 #header {height: 80px; background:  #9966FF;
