--- a/css/index.css
+++ b/css/index.css
@@ -13,15 +13,18 @@ input {
 	margin: 0 auto;margin-top: 20px; background-color: rgb(247,247,247);
 	box-shadow: rgba(0, 0, 0, 0.3) 1px 2px 2px 1px;
 }
+#show_booking {margin-top: 0px; height: 730px;}
 .btn {width: 300px; height: 100px; background: rgb(48, 121, 237); margin: 30px auto; display: block;
 	border-radius: 6px; text-align: center; font-size: 28px; letter-spacing: 3px;
 }
-#reg,#cancel,#status {width: 500px; height: 700px; margin: 20px auto; overflow: hidden;}
-.property {width: 500px; height: 80px; margin-top:25px;}
+#reg,#cancel,#status {width: 500px; height: 750px; margin: 0px auto; overflow: hidden;}
+.property {width: 500px; height: 80px;}
 #p {letter-spacing: 5px;width: 300px; height: 20px; font-size: 18px;}
 select {width: 500px; height: 50px;  border: 1px solid #fff; margin-right: 0px;}
 input {width: 496px; height: 40px; border:1px solid gray;}
 #reg_btn,#abolish_btn,#check_btn {width: 500px; height: 45px; margin-top: 18px; border-radius: 6px; 
 	background-color: rgb(48, 121, 237); font-size: 18px; letter-spacing: 3px;
 }
-.goback {width: 200px;margin-left: 300px; color: blue; font-size: 18px; font-family:Tomes, Georia;}
+.goback {width: 200px;margin-left: 300px; color: blue; font-size: 18px; font-family:Tomes, Georia;
+	height: 50px;
+}
